# stock_ai_agent

./: .env  .gitignore  pyproject.toml
.github/workflows/: test.yml
scripts/: generate_report.py
src/agent/: prompts.py
src/report/: report_builder.py  template.py
src/tools/: llm.py
stock_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/unit/: test_llm.py  test_prompts.py  test_report_builder.py
