[project]
name = "stock-ai-agent"
version = "0.1.0"
description = "AI-powered stock analysis tool"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "akshare>=1.14.0",
    "pandas",
    "python-dotenv",
    "jinja2"   # 
]

[project.optional-dependencies]
dev = [
    "pytest",
    "behave",
    "pytest-mock",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
